# gamedev

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md
engine/: CMakeLists.txt
engine/include/engine/: App.h  Color.h  Font.h  Game.h  Input.h  Renderer.h  Vec2.h
engine/src/: App.cpp  Font.cpp  Input.cpp  Renderer.cpp
engine3d/: .gitignore  CMakeLists.txt  README.md  build_windows.sh
engine3d/src/: gl_interactive.cpp  gl_main.cpp  main.cpp  math3d.h  mesh.cpp  mesh.h  swrender.cpp  swrender.h
games/haul/: CMakeLists.txt  Config.h  Face.h  main.cpp
games/murk/: .gitignore  DESIGN.md  IDEAS.md  README.md  project.godot
games/murk/scripts/: Difficulty.gd  Difficulty.gd.uid  Main.gd  Main.gd.uid  Player.gd  Player.gd.uid
games/murk/shaders/: lava.gdshader  lava.gdshader.uid  moving_fog.gdshader  moving_fog.gdshader.uid  post.gdshader  post.gdshader.uid
